# ff-MAGMA

./: DESCRIPTION  INSTALL  LICENSE.note  NAMESPACE  README.md  configure.ac  index.md
R/: Exp.fast.cov.R  ExponentialUpper.R  RwrapperMAGMA.r  compactToMat.R  dist.R  mKrigMAGMA.MLE.R  mKrigMAGMA.r  stationary.fast.cov.R  supportsOnlyUpper.R
man/: CovarianceUpper.Rd  RwrapperMAGMA.Rd  compactToMat.Rd  dist.Rd  fieldsMAGMA-package.Rd  fieldsMAGMA.tests.Rd  mKrigMAGMA.MLE.Rd  mKrigMAGMA.Rd  stationary.fast.cov.Rd  supportsOnlyUpper.Rd
src/: ExponentialUpper.f  ExponentialUpperC.c  compactToMatC.c  expfn.c  magmaCholesky.c  magmaCholesky_m.c  multeb.c  smagmaCholesky.c  smagmaCholesky_m.c
tests/: mKrigMAGMA.MLE.test.R  mKrigMAGMA.test.R  test.cov.R
